# Plates-counter

./: .gitignore  README.md
.github/workflows/: firmware-build.yml
Prototype_A/: CMakeLists.txt  README.md
Prototype_A/main/: CMakeLists.txt  main.c  sensor.h  sensore.c
docs/: architecture.md  historical-prototype-a.md
examples/traces/: clean-count.trace  noisy-count.trace  rejected-tray.trace
firmware/: CMakeLists.txt  README.md
firmware/components/ttn-esp32/examples/hello_world_in_c/main/: main.c
firmware/main/: CMakeLists.txt  app_config.h  dish_counter_defaults.h  dish_counter_logic.cpp  dish_counter_logic.h  lorawan_service.cpp  lorawan_service.h  main.cpp  tasks.cpp  tasks.h
prototype_B_basic/: README.md  sdkconfig  sdkconfig.old
prototype_B_basic/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  oled.c  oled.h  tasks.cpp  tasks.h
tests/: CMakeLists.txt  dish_counter_logic_test.cpp
tools/: README.md  dish_counter_simulator.cpp
